--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,23 +1,24 @@
 .logo{
-    width : 100px;
+    width : 9%;
     float : left;
     margin-right : 20px;
 }
 nav{
-    padding-left: 800px;
+    padding-left: 55%;
 }
 nav ul li{
     display: inline-flex;
     list-style: none;
 }
 nav ul li a {
-    color:darkorchid;
+    color: blueviolet;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.8vw;
     padding: 0px 20px;
 }
 a{
     position: relative;
+    display: block;
     cursor: pointer;
     padding: 8px 0;
     color: #9b59b6;
@@ -33,7 +34,7 @@ a:before, a:after {
     width: 0%;
     height: 2px;
     bottom: -2px;
-    background: #71b7e6;
+    background:#9b59b6;
 }
 a:before {
     left: 0;
@@ -44,12 +45,12 @@ a:after {
     transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:before {
-    background: #fff;
+    background: #71b7e6;
     width: 100%;
     transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:after {
-    background: #fff;
+    background:#71b7e6;
     width: 100%;
     transition: 0s;
 }
@@ -127,6 +128,9 @@ form .button input{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 @media only screen and (max-width: 700px) {
+    main{
+        height: 140vh;
+    }
     .container{
         width: 95%;
     }
@@ -148,13 +152,5 @@ form .button input{
     form .user-details .gender-details {
         margin: 10px 0 5px 0;
         width: 100%;
-    }
-}
-@media only screen and (height: 650px) {
-    main{
-        height: 100%;
-    }
-    .container{
-        height: 100%;
     }
 }
