--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,15 +29,15 @@
         <div class="container">
             <div class="sub-cont">
                 <img class="image" src="images/manageteam.png">
-                <h6 class="descriptions"> Gestion des adhésion</h6>
+                <h6 class="descriptionss"> Gestion des adhésion</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/paiement.png">
-                <h6 class="description"> Paiement en ligne</h6>
+                <h6 class="descriptionn"> Paiement en ligne</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/communications.png">
-                <h6 class="descriptions"> communication</h6>
+                <h6 class="descriptionsx"> communication</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/ticket.png">
