--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -1,5 +1,5 @@
 .logo{
-    width : 100px;
+    width : 9%;
     margin-right : 20px;
 }
 .nav{
@@ -12,7 +12,7 @@ nav ul li{
 nav ul li a {
     color:darkorchid;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.8vw;
     padding: 0px 20px;
 }
 a{
@@ -48,7 +48,7 @@ a:hover:before {
     transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:after {
-    background: #fff;
+    background:#71b7e6;
     width: 100%;
     transition: 0s;
 }
@@ -58,7 +58,7 @@ main{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 .head .homeimg{
-    width : 207vh;
+    width : 208vh;
     height: 55vh;
 }
 .cont .container{
@@ -114,7 +114,6 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
     border-bottom-width: 2px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.88);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-
 }
 .container .sub-cont:hover{
     box-shadow: 0 14px 28px rgba(0,0,0,0.55), 0 10px 10px rgba(0,0,0,0.52);
@@ -124,11 +123,20 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
      align-content: center;
      margin-left: 20px;
 }
+.sub-cont .descriptionss{
+    margin-left: 20px;
+}
+.sub-cont .descriptionn{
+    margin-left: 14px;
+}
  .sub-cont .description{
-     margin-left: 10px;
+     margin-left: 24px;
  }
+.sub-cont .descriptionsx{
+    margin-left: 4px;
+}
 .sub-cont .descriptions{
-    margin-left: 12px;
+    margin-left: 16px;
 }
 .sub-cont .descriptionS{
     align-content: center;
@@ -165,24 +173,23 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
 .sub-cont .price1 {
     margin-left: 25px;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
     nav{
         margin-left: 37px;
     }
     .head .homeimg{
-        width: 98vw;
+        width: 100vw;
     }
     main{
         width: 98vw;
         height: 381vw;
     }
     .title{
-        width: 9vw;
-        padding-left: 10em;
+        width:  1%;
         height: 10vw;
     }
     .title1{
-        width: 10vw;
+        width: 0.01%;
         height: 10vw;
     }
     .cont .container{
@@ -212,11 +219,4 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
         padding-left: 25px;
     }
 }
-@media only screen and (height: 650px) {
-    main{
-        height: 100%;
-    }
-    .container{
-        height: 100%;
-    }
-}
+
