--- a/src/main/resources/static/css/signupmember.css
+++ b/src/main/resources/static/css/signupmember.css
@@ -1,5 +1,5 @@
 .logo{
-    width : 100px;
+    width : 9%;
     float : left;
     margin-right : 20px;
 }
@@ -11,7 +11,7 @@ main{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 nav{
-    padding-left: 700px;
+    padding-left: 50%;
 }
 nav ul li{
     display: inline-flex;
@@ -20,7 +20,7 @@ nav ul li{
 nav ul li a {
     color: blueviolet;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.8vw;
     padding: 0px 20px;
 }
 a{
@@ -41,7 +41,7 @@ a:before, a:after {
     width: 0%;
     height: 2px;
     bottom: -2px;
-    background: #71b7e6;
+    background:#9b59b6;
 }
 a:before {
     left: 0;
@@ -52,12 +52,12 @@ a:after {
     transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:before {
-    background: #fff;
+    background: #9b59b6;
     width: 100%;
     transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:after {
-    background: #fff;
+    background:#71b7e6;
     width: 100%;
     transition: 0s;
 }
@@ -137,6 +137,9 @@ form .button input{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 @media only screen and (max-width: 700px) {
+    main{
+        height: 140vh;
+    }
     .container{
         width: 95%;
     }
@@ -164,12 +167,5 @@ form .button input{
         width: 100%;
     }
 }
-@media only screen and (height: 650px) {
-    main{
-        height: 100%;
-    }
-    .container{
-        height: 100%;
-    }
-}
+
 
