Fix number of members in last month in dashboard page Fix active page in sidebar

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -52,7 +52,7 @@
             <div id="case_5">
                 <img class="image_member" src="images/new_member.png"/>
                 <div id=case_5_text>
-                    <p id="member_count_number">3</p>
+                    <p id="member_count_number" th:text="${session.membersinmonth.size()}"></p>
                     <p id="member_count">durant ce mois</p>
                 </div>
             </div>
