--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -19,12 +19,15 @@
             <img class="logo" src="images/logo.png"/>
         </div>
         <div class="sidebar-menu">
+
+            <div th:if="${#strings.equals(#request.getParameter('error'), 'badCredentialsException')}"></div>
+
             <ul>
                 <li>
-                    <a href="/dashboard" class="active"><span class="tab-bord"></span><span>Tableau de bord</span></a>
+                    <a href="/dashboard" th:class="${#strings.equals(session.active, 'dashboard')} ? active : act"><span class="tab-bord"></span><span>Tableau de bord</span></a>
                 </li>
                 <li>
-                    <a href="/managemembers" class="act"><span class="G-member"></span><span>Gestion des membres</span></a>
+                    <a href="/managemembers" th:class="${#strings.equals(session.active, 'managemembers')} ? active : act"><span class="G-member"></span><span>Gestion des membres</span></a>
                 </li>
                 <li>
                     <a class="act"><span class="bill"></span><span>Billetterie</span></a>
@@ -33,10 +36,10 @@
                     <a class="act"><span class="coll"></span><span>Collectes</span></a>
                 </li>
                 <li>
-                    <a href="/managepayments" class="act"><span class="pai"></span><span>Paiements</span></a>
+                    <a href="/managepayments" th:class="${#strings.equals(session.active, 'managepayments')} ? active : act"><span class="pai"></span><span>Paiements</span></a>
                 </li>
                 <li>
-                    <a href="/contact" class="act"><span class="comm"></span><span>Communication</span></a>
+                    <a href="/contact" th:class="${#strings.equals(session.active, 'contact')} ? active : act"><span class="comm"></span><span>Communication</span></a>
                 </li>
             </ul>
         </div>
