--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -63,11 +63,12 @@ main{
 }
 .cont .container{
     display: flex;
+    width: 98vw;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 .cont .title{
-    padding-left: 500px;
+    padding-left: 38vw;
     color: #ffffff;
     font-style: italic;
     box-shadow: 0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.28);
@@ -77,7 +78,7 @@ main{
 box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
 }
 .cont .title1{
-    padding-left: 560px;
+    padding-left: 43vw;
     color:#ffffff;
     font-style: italic;
     box-shadow: 0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.28);
@@ -173,28 +174,16 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.12);
 .sub-cont .price1 {
     margin-left: 25px;
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
     nav{
         margin-left: 37px;
     }
     .head .homeimg{
-        width: 100vw;
+        width: 100%;
     }
     main{
         width: 98vw;
-        height: 381vw;
-    }
-    .title{
-        width:  1%;
-        height: 10vw;
-    }
-    .title1{
-        width: 0.01%;
-        height: 10vw;
-    }
-    .cont .container{
-        width: 98vw;
-        margin: 10px 0 5px 0;
+        height: 371vw;
     }
     .container .sub-cont{
         width: 40vw;
