--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -24,10 +24,10 @@
 
             <ul>
                 <li>
-                    <a href="/dashboard" th:class="${#strings.equals(session.active, 'dashboard')} ? active : act"><span class="tab-bord"></span><span>Tableau de bord</span></a>
+                    <a href="/dashboard" th:class="${#strings.equals(page, 'dashboard')} ? active : act"><span class="tab-bord"></span><span>Tableau de bord</span></a>
                 </li>
                 <li>
-                    <a href="/managemembers" th:class="${#strings.equals(session.active, 'managemembers')} ? active : act"><span class="G-member"></span><span>Gestion des membres</span></a>
+                    <a href="/managemembers" th:class="${#strings.equals(page, 'managemembers')} ? active : act"><span class="G-member"></span><span>Gestion des membres</span></a>
                 </li>
                 <li>
                     <a class="act"><span class="bill"></span><span>Billetterie</span></a>
@@ -36,10 +36,10 @@
                     <a class="act"><span class="coll"></span><span>Collectes</span></a>
                 </li>
                 <li>
-                    <a href="/managepayments" th:class="${#strings.equals(session.active, 'managepayments')} ? active : act"><span class="pai"></span><span>Paiements</span></a>
+                    <a href="/managepayments" th:class="${#strings.equals(page, 'managepayments')} ? active : act"><span class="pai"></span><span>Paiements</span></a>
                 </li>
                 <li>
-                    <a href="/contact" th:class="${#strings.equals(session.active, 'contact')} ? active : act"><span class="comm"></span><span>Communication</span></a>
+                    <a href="/contact" th:class="${#strings.equals(page, 'contact')} ? active : act"><span class="comm"></span><span>Communication</span></a>
                 </li>
             </ul>
         </div>
