--- a/src/main/resources/templates/billingmember.html
+++ b/src/main/resources/templates/billingmember.html
@@ -12,7 +12,6 @@
     />
     <link rel="stylesheet" href="css/billingmember.css"/>
     <title>Paiement</title>
-
 </head>
 <body>
 <header>
@@ -27,27 +26,34 @@
             <div class="user-details">
                 <div class="input-box">
                     <label class="details" for="creditCard">Numéro de carte bancaire</label>
-                    <input id="creditCard" name="creditCard"
+                    <input id="creditCard"
+                           name="creditCard"
                            pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|(?:5[1-5][0-9]{2}|222[1-9]|22[3-9][0-9]|2[3-6][0-9]{2}|27[01][0-9]|2720)[0-9]{12})$"
                            placeholder="Entrez votre numéro de carte bancaire"
-                           required type="text">
+                           type="text" required>
                 </div>
                 <div class="input-box">
                     <label class="details" for="expirationDate">Date d'expiration</label>
-                    <input id="expirationDate" name="expirationDate" pattern="[0-9]{2}/[0-9]{2}"
-                           placeholder="date d'expiration de carte au format MM/AA" required
-                           type="text">
+                    <input id="expirationDate"
+                           name="expirationDate"
+                           pattern="[0-9]{2}/[0-9]{2}"
+                           placeholder="date d'expiration de carte au format MM/AA"
+                           type="text" required>
                 </div>
                 <div class="input-box">
                     <label class="details" for="cryptogram">Cryptogramme</label>
-                    <input id="cryptogram" name="cryptogram" pattern="[0-9]{3}"
+                    <input id="cryptogram"
+                           name="cryptogram"
+                           pattern="[0-9]{3}"
                            placeholder="Entrez votre cryptogramme de carte"
-                           required type="text">
+                           type="text" required>
                 </div>
                 <div class="input-box">
                     <label class="details" for="name">Nom</label>
-                    <input id="name" name="name" placeholder="Entrez le nom présent sur la carte bancaire"
-                           required type="text">
+                    <input id="name"
+                           name="name"
+                           placeholder="Entrez le nom présent sur la carte bancaire"
+                           type="text" required>
                 </div>
             </div>
             <div class="ab-details">
@@ -77,7 +83,8 @@
         </form>
         <div class="input-button2">
             <form action="/billingskip" method="post">
-                <input th:disabled="${session.subscription.delayed}" type="submit"
+                <input th:disabled="${session.subscription.delayed}"
+                       type="submit"
                        value="Effectuer le paiement plus tard">
             </form>
         </div>
