--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -29,11 +29,18 @@
                 <div class="user-details">
                     <div class="input-box">
                         <label class="details" for="object">Objet</label>
-                        <input id="object" name="object" placeholder="Entrez l'objet du mail" required type="text">
+                        <input id="object"
+                               name="object"
+                               placeholder="Entrez l'objet du mail"
+                               type="text" required>
                     </div>
                     <div class="input-box">
-                        <textarea id="body" name="body" rows="5" cols="33" required
-                                  placeholder="Votre message"></textarea>
+                        <textarea id="body"
+                                  name="body"
+                                  rows="5"
+                                  cols="33"
+                                  placeholder="Votre message"
+                                  type="text" required></textarea>
                     </div>
                     <div th:object="${member}">
                         <select id="emailMember" name="emailMember">
