--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,16 +29,24 @@
         <form action="/loginconfirm" id="loginConfirm" method="post">
             <div class="data">
                 <label for="associationName">Association</label>
-                <input id="associationName" name="associationName" placeholder="Entrez le nom de l'association"
+                <input id="associationName"
+                       name="associationName"
+                       placeholder="Entrez le nom de l'association"
                        type="text">
             </div>
             <div class="data">
                 <label for="email">Email</label>
-                <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
+                <input id="email"
+                       name="email"
+                       placeholder="Entrez votre adresse email"
+                       type="email">
             </div>
             <div class="data">
                 <label for="password">Mot de passe</label>
-                <input id="password" name="password" placeholder="Entrez votre mot de passe" type="password">
+                <input id="password"
+                       name="password"
+                       placeholder="Entrez votre mot de passe"
+                       type="password">
             </div>
             <div>
                 <a href="/passwordforgotten">Mot de passe oublié ?</a>
