--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -21,12 +21,11 @@
 <div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
     <div class="center">
+        <div class="title"><strong>Entrez votre adresse email!</strong></div>
         <p th:text="${success}"></p>
         <p th:text="${error}"></p>
         <form action="/passwordforgotten" method="post">
             <div class="container">
-                <div class="title">Entrez votre adresse email!</div>
-                <hr/>
                 <div class="data">
                     <label for="email">Email</label>
                     <input id="email" name="email" placeholder="Entrez votre adresse email" type="email">
