--- a/src/main/resources/templates/signupsuperadmin.html
+++ b/src/main/resources/templates/signupsuperadmin.html
@@ -23,7 +23,7 @@
 <div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
     <div class="container">
-        <div class="title">Inscrivez-vous!</div>
+        <div class="title"><strong>Inscrivez-vous !</strong></div>
         <p th:text="${error}"></p>
         <form action="/signupsuperadminconfirm" id="signupSuperAdminConfirm" method="post">
             <div class="user-details">
