--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="container">
-            <div class="title">Profile</div>
+            <div class="title"><strong>Profile</strong></div>
             <p th:text="${success}"></p>
             <p th:text="${error}"></p>
             <form action="/profileedit" id="profile" method="post">
