--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,6 @@
 <head>
     <!-- Required meta tags -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-    <meta name="viewport" content="width=device.width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link
             crossorigin="anonymous"
@@ -40,15 +39,15 @@
                 <label for="password">Mot de passe</label>
                 <input id="password" name="password" placeholder="Entrez votre mot de passe" type="password">
             </div>
-            <div>
-                <a href="/passwordforgotten">Mot de passe oublié ?</a>
-            </div>
-            <br/>
             <div class="connecter">
                 <input id="loginButton" type="submit" value="Se connecter">
             </div>
+            <br/>
             <div>
-                <a href="/signup">Pas encore inscrit ? Inscrivez vous !</a>
+                <a class= "pass" href="/passwordforgotten">Mot de passe oublié ?</a>
+            </div>
+            <div>
+                <a class= "sign" href="/signup">Pas encore inscrit ? Inscrivez vous !</a>
             </div>
         </form>
     </div>
