--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,7 +22,7 @@
 <div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
     <div class="head">
-        <p>inscrivez-vous en tant que:</p>
+        <p>inscrivez-vous en tant que</p>
     </div>
     <div class="cont">
         <div class="container">
