--- a/src/main/resources/templates/signupsuperadmin.html
+++ b/src/main/resources/templates/signupsuperadmin.html
@@ -135,7 +135,7 @@
             </div>
             </br>
             <div>
-                <a href="/login">Déjà inscrit ? Connectez-vous !</a>
+                <a class="login" href="/login">Déjà inscrit ? Connectez-vous !</a>
             </div>
             <div class="button">
                 <input id="signUpButton" type="submit" value="S'inscrire">
