--- a/src/main/resources/static/css/signupmember.css
+++ b/src/main/resources/static/css/signupmember.css
@@ -69,6 +69,7 @@ a:hover:after {
     border-radius: 5px;
 }
 .container .title{
+    padding-left: 210px;
     font-size: 25px;
     font-weight: 500;
 }
@@ -118,6 +119,9 @@ form .user-details .level-details {
     display: block;
     font-weight: 500;
     margin-bottom: 5px;
+}
+form .login{
+    padding-left: 210px;
 }
 form .button{
     height: 35px;
