--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -23,7 +23,7 @@
 <div th:insert="fragments/topbar.html :: topbar"></div>
 <main>
     <div class="container">
-        <div class="text">Rejoignez-nous</div>
+        <div class="textj">Rejoignez-nous!</div>
         <hr/>
         <p th:text="${error}"></p>
         <form action="/joinconfirm" id="joinConfirm" method="post">
@@ -42,15 +42,15 @@
                 <input id="password" name="password" placeholder="Entrez votre mot de passe" value="abcd"
                        type="password">
             </div>
-            <div>
-                <a href="/passwordforgotten">Mot de passe oublié ?</a>
-            </div>
-            <br/>
-            <div class="connecter">
+            <div class="connect">
                 <input id="joinButton" type="submit" value="Rejoindre">
             </div>
+            <br/>
             <div>
-                <a href="/signup">Pas encore inscrit ? Inscrivez-vous !</a>
+                <a class="pass" href="/passwordforgotten">Mot de passe oublié ?</a>
+            </div>
+            <div>
+                <a class="sign" href="/signup">Pas encore inscrit ? Inscrivez-vous !</a>
             </div>
         </form>
 </div>
