--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -96,7 +96,7 @@
                  data-sitekey="faee6d9a-baec-4cc7-baa2-a3e27d9b196d">
             </div>
             <div>
-                <a href="/login">Déjà inscrit ? Connectez-vous !</a>
+                <a class="login" href="/login">Déjà inscrit ? Connectez-vous !</a>
             </div>
             <div class="button">
                 <input id="signUpButton" type="submit" value="S'inscrire">
